# thailand-administrative-boundary

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: 01_province.ipynb  02_district.ipynb  03_subdistrict.ipynb  04_simplify_for_gist.ipynb  foo.py
