[tool.poetry]
name = "thailand-administrative-boundary"
version = "0.1.0"
description = ""
authors = ["kahnwong <karn@karnwong.me>"]
readme = "README.md"
packages = [
  {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"
apache-sedona = "1.4.1"
geopandas = "^0.14.1"
geospark = "^1.3.1"
jupyter = "^1.0.0"
pyarrow = "^14.0.2"
pyspark = "3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
